# bsi-grundschutz-classification

./: .gitignore  LICENSE  README.md  pyproject.toml
data/1_anforderungen/: README.md  requirements.csv  sentences.csv
data/2_schema/: kodierschema.md
data/3_kodierung/: coder_autor.csv  coder_template.xlsx  coder_zweitkodierer.csv  stichprobe.csv  stichprobe_log.json
data/4_adjudikation/: adjudikation.csv  schema_notizen.md
data/5_auswertung/: icr_full.txt  konsens.csv
data/6_lab_auswahl/: README.md  ergebnisklassen_mapping.md  lab_requirements.csv  selection_log.json
scripts/: build_human_consensus.py  compute_icr.py
tests/: test_build_human_consensus.py  test_compute_icr.py
